Fix outline generation for brushes with non-standard number of spikes

BUG:445927
(cherry picked from commit a60102f0747e7a03666c5920f6773e7db0134a16)